--- a/B_Practical/1a_nginx/index.html
+++ b/B_Practical/1a_nginx/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1>Hello From Nginx in DOCKER 🚀</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque quasi
+      atque fugit repudiandae fugiat, numquam quos magnam deserunt dolorem,
+      obcaecati sed ullam consequatur dignissimos dolore quis beatae itaque
+      tempore. Quibusdam!
+    </p>
     <h1>its still connected.</h1>
   </body>
 </html>
